Fixed Overflow

--- a/src/style/widgets.css
+++ b/src/style/widgets.css
@@ -1754,17 +1754,6 @@
  .MatchWidgetTypeTextBox {
 	overflow: hidden;
  }
-
- .MatcWidgetTypeTextBoxWrapper {
-	position: absolute;
-	height: 100%;
-	width: 100%;
-	border-style: solid;
-	left: 0px;
-    top: 0px;
-    border-style: solid;
-    overflow: hidden;
- }
  
 .MatcWidgetTypeTextBoxPreview {
 	display: flex;
@@ -1773,8 +1762,7 @@
 	overflow: hidden;
 }
 
-
-.MatcWidgetTypeTextBoxWrapper .MatcWidgetTypeTextBoxInput{
+.MatcWidgetTypeTextBox .MatcWidgetTypeTextBoxInput{
 	background: none;
 	width: 100%;
 	height:100%;
@@ -1784,7 +1772,6 @@
 	color:inherit;
 	border-style: solid;
 	outline: none;
-	border: none;
 }
 
 .MatcWidgetTypeTextBoxInputForm{
@@ -1794,6 +1781,11 @@
 	top :0px;
 	left:0px;
 }
+/*******************************
+ * Standard Types
+ *******************************/
+
+
 
 .MatcSimulator input{
 	outline: none;
@@ -1803,13 +1795,12 @@
 	cursor: pointer;
 }
 
-.MatcSimulator .MatchWidgetTypeLabel, .MatcSimulator .MatchWidgetTypeHotSpot, .MatcSimulator .MatchWidgetTypeImage{
+.MatcSimulator .MatchWidgetTypeLabel, 
+.MatcSimulator .MatchWidgetTypeHotSpot,
+.MatcSimulator .MatchWidgetTypeImage{
 	border: none;
 }
 
-/*******************************
- * Standard Types
- *******************************/
 
 .MatchWidgetTypeImage{
 	border: none;
